# shared-memory

./: .gitmodules  CMakeLists.txt
include/: SharedArray.hpp  SharedMemory.hpp  shared_array.hpp  shared_memory.hpp
test/: CMakeLists.txt
test/tests/: SharedMemory.cpp  shared_array.cpp  shared_memory.cpp
